@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "01 August 2013" "" ""
+.TH TURN 1 "02 August 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -264,6 +264,10 @@ STUN server port (Default: 3478).
 .B
 \fB\-L\fP
 Local address to use (optional).
+.TP
+.B
+\fB\-f\fP
+Force RFC 5780 processing.
 .PP
 The \fIturnutils_stunclient\fP program checks the results of the first request, 
 and if it finds that the STUN server supports RFC 5780 
